# PQT

./: .gitignore  README.md  package-lock.json  package.json
docs/: API.md  CSV Header Guide.md  DataIngestionSystem.md  DatabaseSchema.md  QR Code Data Retrieval Query.md
src/client/public/: index.html
src/client/src/: App.js
src/client/src/components/: FileUpload.js
src/client/src/pages/: ActivityUpload.js  PotencyUpload.js  PurityUpload.js
src/client/src/public/: Cargo.toml  index.html
src/client/src/public/.cargo/: config.toml
src/client/src/public/src/: lib.rs
src/client/src/services/: api.js
src/database/: init_db.sql  schema.sql
src/server/: auth.js  database.js  server.js
src/server/middleware/: authMiddleware.js
src/server/routes/: adminRoutes.js
src/server/services/: dataExtraction.js  dataTransformation.js  dataValidation.js
www/: Cargo.toml  app.js  index.html  server.py
www/old/0.0.1/: index.html  style.css
www/src/: lib.rs
