[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
description = "WebAssembly dashboard for probiotic quality data"
authors = ["Your Name"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "HtmlDivElement",
    "HtmlTableElement",
    "HtmlTableSectionElement",
    "HtmlTableRowElement",
    "HtmlTableCellElement",
    "console"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.37"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.10"
dotenv = "0.15"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false